retrieve event detailed data